# MLOps-For-NLP

./: .gitattributes  .gitignore  Dockerfile  README.md  app.py  config.json  docker-compose.yaml  logging_config.py  onnx_maker.py  preprocessing.ipynb  pyproject.toml
airflow/dags/: news_scraper_etl.py
api/: app.py
data/: preprocessed_test.csv
distibert_onnx/: config.json  model.onnx
distilbert_trainer/: model.safetensors
electra_onnx/: config.json  tokenizer_config.json
electra_trainer/: config.json
modeling/Traditional/: LSTM.ipynb  RNN.ipynb  early_stopper.py  train_eval.py
modeling/Transformers/: DistilBERT.ipynb  Electra.ipynb
